--- a/public/style.css
+++ b/public/style.css
@@ -5,18 +5,24 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-image: url("https://cms.ar-racking.com/uploads/2020/06/2023-3.jpg");
+  background-image: url("https://wallpapers.com/images/featured/pzkv8y7kvdmmnyej.jpg");
   background-color: #f4f4f4;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  overflow: hidden;
+  background-position: center center;
 }
 
 .main {
   border: 3px solid black;
   margin: auto;
-  width: fit-content;
+  max-width: 800px;
   background-color: white;
   padding: 20px;
   margin-top: 20px;
   border-radius: 10px;
+  overflow: auto;
+  max-height: 800px;
 }
 
 h1 {
