--- a/public/style.css
+++ b/public/style.css
@@ -4,12 +4,13 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: helvetica;
   background-image: url("https://wallpapers.com/images/featured/pzkv8y7kvdmmnyej.jpg");
   background-color: #f4f4f4;
   background-repeat: no-repeat;
   background-attachment: fixed;
   overflow: hidden;
+  font-style: bold;
   background-position: center center;
 }
 
