--- a/public/style.css
+++ b/public/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: 'Quicksand', sans-serif;
   background-image: url("https://wallpapers.com/images/featured/pzkv8y7kvdmmnyej.jpg");
   background-color: #f4f4f4;
   background-repeat: no-repeat;
