--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,7 @@ body {
   background-attachment: fixed;
   overflow: hidden;
   background-position: center center;
+  background-size: cover;
 }
 
 .main {
